Fix/Update sidebar headers and remove collapsibility

--- a/src/containers/AppHeader/style.css
+++ b/src/containers/AppHeader/style.css
@@ -5,7 +5,7 @@
     color: var(--dark-theme-text-color);
     font-size: 12px;
     justify-content: space-between;
-    box-shadow: 0px 3px 3px black;
+    box-shadow: 0px 3px 3px var(--dark);
     z-index: 200;
 }
 
