--- a/src/containers/ResultsPanel/style.css
+++ b/src/containers/ResultsPanel/style.css
@@ -1,3 +1,3 @@
 .container :global(.ant-card-body) {
-    padding: 0 0 0 10px;
+    padding: 0 10px 0 0;
 }
